--- a/peekaboo.html
+++ b/peekaboo.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" media="screen">
     <script src="js/jquery-3.1.0.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
       <title>walrus</title>
   </head>
+
+
   <body>
+  <div class="container">
+    <h1>Peek-a-boo</h1>
+    <p><strong>Peek-a-boo</strong>YOLO!</p>
 
-  <h1>Peek-a-boo</h1>
+    <div class="walrus-hidden">
+      <p> Lets play peek-a-boo. <span class="clickable">click here</span> to see a surprise!</p>
+    </div>
 
+    <div class="walrus-showing">
+      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p> 
+      <img src="img/walrus.jpg" alt="Walrus">
+    </div>
+
+
+    </div>
   </body>
 </html>
